manifests/dev/kapowarr/Deployment-kapowarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: kapowarr
    app.kubernetes.io/name: kapowarr
    app.kubernetes.io/version: latest
  name: kapowarr
  namespace: kapowarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/instance: kapowarr
      app.kubernetes.io/name: kapowarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: kapowarr
        app.kubernetes.io/name: kapowarr
    spec:
      automountServiceAccountToken: true
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: Etc/UTC
          image: mrcas/kapowarr:latest
          imagePullPolicy: IfNotPresent
          livenessProbe:
            failureThreshold: 3
            initialDelaySeconds: 60
            periodSeconds: 30
            successThreshold: 1
            tcpSocket:
              port: 5656
            timeoutSeconds: 5
          name: kapowarr
          ports:
            - containerPort: 5656
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            tcpSocket:
              port: 5656
            timeoutSeconds: 5
          volumeMounts:
            - mountPath: /app/db
              name: config
            - mountPath: /app/temp_downloads
              name: downloads
            - mountPath: /comics
              name: library
      initContainers: []
      nodeSelector:
        kubernetes.io/hostname: edgenix
      serviceAccountName: default
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: kapowarr-kapowarr-config
        - name: downloads
          persistentVolumeClaim:
            claimName: kapowarr-kapowarr-downloads
        - name: library
          persistentVolumeClaim:
            claimName: kapowarr-kapowarr-library
