manifests/dev/kapowarr/Service-kapowarr.yaml
apiVersion: v1
kind: Service
metadata:
  name: kapowarr
  namespace: kapowarr
spec:
  ports:
    - name: http
      port: 5656
      protocol: TCP
      targetPort: http
  selector:
    app.kubernetes.io/instance: kapowarr
    app.kubernetes.io/name: kapowarr
  type: ClusterIP
