manifests/dev/kapowarr/Ingress-kapowarr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: kapowarr
  namespace: kapowarr
spec:
  ingressClassName: traefik
  rules:
    - host: kapowarr.home.kronkltd.net
      http:
        paths:
          - backend:
              service:
                name: kapowarr
                port:
                  name: http
            path: /
            pathType: ImplementationSpecific
  tls:
    - hosts:
        - kapowarr.home.kronkltd.net
      secretName: kapowarr.home.kronkltd.net-tls
